added references and tweaked language in intro, naive quanitification sections

--- a/manuscript/CI_interactions.tex
+++ b/manuscript/CI_interactions.tex
@@ -54,28 +54,14 @@ Link\"{o}ping, Sweden\\
     % Present Salix data with holes as an example of uncertainty in data. Focus just on the white and grey, ignore uncertainty in the blacks
 
 
-    Ecological networks-- which include antagonistic food webs and host-parasite networks as well as plant-pollinator and plant-frugivore mutualist networks --are usually considered to be static representations of the communities and interactions they describe. That is, whether the network is assembled based on aggregated data, a single intensive "snapshot" sample, or expert knowledge, interactions are assumed to occur at constant frequencies~\citep{Olesen2011a}. This assumption conflicts with known variation in interactions over time~\citep{Kitching1987,Olesen2011a} and space~\citep{Kitching1987,Baiser2012} and between individuals of a given species~\citep{Pires2011a,Fodrie2015,Novak2015}. Taking the variances in interaction frequencies into account would therefore represent a substantial increase in the realism of ecological networks as representations of ecological communities.
+    Ecological networks-- which include antagonistic food webs and host-parasite networks as well as plant-pollinator and plant-frugivore mutualist networks --are usually considered to be static representations of the communities and interactions they describe. That is, whether the network is assembled based on aggregated data, a single intensive "snapshot" sample, or expert knowledge, interactions are assumed to occur at constant frequencies~\citep{Olesen2011a}. This assumption conflicts with known variation in interactions over time~\citep{Kitching1987,Olesen2011a} and space~\citep{Kitching1987,Baiser2012} and between individuals of a given species~\citep{Pires2011a,Fodrie2015,Novak2015}. Taking the variation in interaction frequencies into account would therefore represent a substantial increase in the realism of ecological networks as representations of ecological communities.
 
 
-    Efforts to account for variance in interaction frequencies are complicated by the fact that not only interaction frequencies but network structure vary over space and time. Community composition and species abundances vary from site to site~\citep{Baiser2012} and over time within a site~\citep{Olesen2011a}. Moreover, interactions between species may change even if the participating species remain present at a site but do not co-occur temporally or are too rare to detect each other~\citep{Tylianakis2010}, or through changes to individual preferences~\citep{Fodrie2015}. Several researchers have pointed to the importance of sampling intensity for the assessment of network structure (e.g.,~\citealp{}). The acknowledgement that insufficient sampling effort limits our ability to describe variation in ecological networks has not, however, led to a quantitative framework to deal with the uncertainty of ecological interactions and of sampling.
+    Efforts to account for variance in interaction frequencies are complicated by the fact that not only interaction frequencies but network structure vary over space and time. Community composition and species abundances vary from site to site~\citep{Baiser2012} and over time within a site~\citep{Olesen2011a}. The removal of a species from a site will obviously also remove its interactions. Interactions can also be lost, however, if participating species remain present but do not co-occur temporally or are too rare to detect each other~\citep{Tylianakis2010}, or through changes to individual preferences~\citep{Fodrie2015}. Several researchers have pointed to the importance of sampling intensity for the assessment of network structure (e.g.,~\citealp{}). Despite this, the acknowledgement that insufficient sampling effort limits our ability to describe variation in ecological networks has not yet led to a quantitative framework to deal with the uncertainty of ecological interactions and of sampling.
 
 
-    The main objective of this study is to develop analytical tools that could be used to better represent the uncertainty in the estimation of pairwise interaction probability. We start with the description of a new Bayesian approach to estimate ecological interactions and of a related R package. We first illustrate the framework with simple quantitative examples, followed by an assessment of the quality of an empirically-estimated plant-pollinator network. Next, we use the framework to provide analytical criteria for improving the sampling of rare interations. Finally, we discuss the implications of uncertainty in the estimation of pairwise interactions on the properties of ecological networks. Through these efforts, we demonstrate both the utility of our approach and the importance of acknowledging the uncertainty inherent in ecological networks.
-
-% <!-- ## Background
-
-%   - Ecological interaction networks are usually considered deterministic, but nature is highly variable and interactions should be considered with their variance
-%   - There is spatial and temporal variability in network structure and of pairwise interactions
-%   - There used to be a debate on the importance of sampling intensity for the assessment of network structure, but it never led to a quantitative framework dealing with uncertainty of ecological interactions and of sampling
-
-% ## Objective:
-
-%   - The main objective of this study is to develop analytical tools that could be used to better represent the uncertainty in the estimation of pairwise interaction probability
-%   - We start with the description of a new bayesian approach to estimate ecological interactions and of a related R package. 
-%   - We illustre the framework with simple quantitative examples, and then with the assessment of the quality of an empirical estimate of plant-pollinator networks. 
-%   - We further use the framework to provide analytical criteria for improving the sampling of rare interations. 
-%   - We discuss the implications of the uncertainty in the estimation of pairwise interactions on the properties of ecological networks -->
-
+    The main objective of this study is to develop analytical tools that could be used to better represent the uncertainty in the estimation of pairwise interaction probability. We start with the description of a new Bayesian approach to estimate ecological interactions and of a related R package. [[We first illustrate the framework with a simple quantitative example. Next, we use the framework to provide analytical criteria for improving the sampling of rare interations. Finally, we discuss the implications of uncertainty in the estimation of pairwise interactions on the properties of ecological networks.]] Through these efforts, we demonstrate both the utility of our approach and the importance of acknowledging the uncertainty inherent in ecological networks.
+    % List of sections may not be accurate any more. Update when paper reaches its final form.
 
 
 \section*{Different uncertainties in computing a network}
@@ -86,9 +72,10 @@ THIS SECTIONS BUILDS ON THE SALIX DATA TO ILLUSTRATE THE GAPS THERE ARE IN THE M
 
 \section*{A naive qunatification of interaction probability and uncertainty}
 
-It is getting more and more common to represent interactions as probabilities. Some theoretical models of network structure propose to represent interactions with probabilities, for instance the minmum potential model introduces gaps in the feeding niche of predators (Allesina et al. 2008), while a gaussian probability function is used to represent the niche by Williams et al. (2010). Eklof et al. (2013) introduced variability as well in the computation of network dimensions, allowing the absence of interactions within the n-dimension niche of every species. Empirical investigation of trait-matching constraints often consider the occurrence of interactions as binomial process (e.g. Rohr et al. 2016). There are also ways to perform analysis of probabilistic networks, with almost all metrics having a probabilistic version (Poisot et al. 2015). But there is not yet consensus on what an interaction probability between a pair of species means, and this is definitely a problem when comes time to estimate the uncertainty of both pairwise interactions and entire networks. 
+It is getting more and more common to represent interactions as probabilities in theoretical models of network structure. For example, the minimum potential model introduces gaps in the feeding niche of predators by sampling based on the likelihood of each interaction~\citep{Allesina2008}, while a gaussian probability function is used to represent the niche by~\citet{Williams2010}. \citet{Eklof2013} also introduced variability  in the computation of network dimensions, allowing the absence of interactions within the n-dimension niche of every species. Empirical investigation of trait-matching constraints often consider the occurrence of interactions as binomial process (e.g.,~\citealp{Rohr2016}). There are also ways to perform analysis of probabilistic networks, with almost all metrics having a probabilistic version~\citep{Poisot2016}. But there is not yet consensus on what an interaction probability between a pair of species means, and this is definitely a problem when comes time to estimate the uncertainty of both pairwise interactions and entire networks. 
 
-As a start, we will consider how we could naively quantify intetraction probability and its associated uncertainty. We consider that a pair of species have been observed $n$ times co-occurring at one location, and the number of times they interact is $k = 0$. We aim to evaluate the uncertainty of this interaction. The occurrence of an interaction is a Bernoulli trial. Consequently, the number of success $k$ over $n$ trials will follow a binomial distribution: 
+
+As a start, we will consider how we could naively quantify intetraction probability and its associated uncertainty for an interaction that has not yet been observed. We consider that a pair of species have been observed $n$ times co-occurring at one location, and the number of times they have been observed interacting is $k = 0$. We aim to evaluate the uncertainty of this interaction. The occurrence of an interaction is a Bernoulli trial. Consequently, the number of success $k$ over $n$ trials will follow a binomial distribution: 
     
     \begin{equation}
       X \sim Bin(n,\lambda) ,
@@ -101,18 +88,23 @@ As a start, we will consider how we could naively quantify intetraction probabil
        \label{likelihood}
     \end{equation}
 
-\noindent The parameter $\lambda$, the probability of observing an interaction over an infinite time interval and area, is the quantity we want to estimate from empirical data. The variance of a Bernoulli experiment is simply n$\lambda$(1-$\lambda$). It is important to remember this variance reports the variability of the number of success $k$ for $n$ trials, it is not the variance associated with the estimation of $\lambda$.
-
-The maximal likelihood estimate of $\lambda$ is straightforward to find given $k$ and $n$. It is simply equal to:
+\noindent The parameter $\lambda$, the probability of observing an interaction over an infinite time interval and area, is the quantity we want to estimate from empirical data. 
+The maximal likelihood estimate (MLE) of $\lambda$ is straightforward to find given $k$ and $n$. It is simply equal to:
 
     \begin{equation}
       \theta_{MLE} = \frac{k}{n}  .
       \label{theta_MLE}
     \end{equation}
 
-It is possible to compute the confidence interval for this estimate using any of several methods, including the \emph{Wilson score interval}, the \emph{Clopper-Pearson interval}, and the \emph{Agresti-Coull Interval}. Finding this estimate is therefore quite straightforward, but it nonetheless has two drawbacks. First, $\lambda$ is a random variable with a given uncertainty and whose distribution is unknown, it is not a single point estimate. This means that even if $k = 0$ in a given sample, it does not implies necessarily that the two species will never interact. It means that no interaction is the most likely situation, but there is nonetheless a significant chance that the two species could interaction. In contrast with the situation where $k>0$, where we are sure that an interaction is feasible (in which case, the ratio $k/n$ is smaller than $n$ because of detection and process uncertainty), we are not sure that absence of interactions are caused by $L=0$. Second, and most importantly, the number of trials $n$ might be very low in many instances (and some pairs of species might even not be documented), and consequently the uncertainty in the estimation of $\lambda$ might be considerable. We illustrated at Fig. X how the estimate of $\lambda$ could vary with sampling size using the Clopper-Pearson interval. It shows that the 95\% confidence interval requires a signifcant amount of sampling in order to be sure that species are not interacting. 
+The variance of a Bernoulli experiment is simply $n\lambda$(1-$\lambda$). It is important to remember this variance reports the variability of the number of success $k$ for $n$ trials and is not the variance associated with the estimation of $\lambda$.
+Given this variance, it is possible to compute the confidence interval for the MLE of $\lambda$ using any of several methods, including the \emph{Wilson score interval}, the \emph{Clopper-Pearson interval}, and the \emph{Agresti-Coull Interval}. Finding this estimate is therefore quite straightforward, but it nonetheless has two drawbacks. First, $\lambda$ is a random variable with a given uncertainty and whose distribution is unknown, it is not a single point estimate. This means that even if $k = 0$ in a given sample, this does not necessarily imply that the two species will never interact. It means that no interaction is the most likely situation but there is nonetheless a significant chance that the two species could interaction. In contrast with the situation where $k>0$, when we are sure that an interaction is feasible, 
+% (in which case, the ratio $k/n$ is smaller than $n$ because of detection and process uncertainty),  % This parenthetical makes the sentence very long. Is it necessary?
+we are not sure that absence of interactions is caused by $L=0$. Second, and most importantly, the number of trials $n$ might be very low in many instances (and some pairs of species might even not be documented once). Consequently, the uncertainty in the estimation of $\lambda$ might be considerable. We illustrated in Fig. X how the estimate of $\lambda$ could vary with sampling size using the Clopper-Pearson interval. It shows that the 95\% confidence interval requires a signifcant amount of sampling in order to be sure that species are not interacting. 
+% Is the Clopper-Pearson interval the one in Dom's code snippets? If so, this is Fig.~\ref{Salix_cdfs}
 
-The situation where $k = 0$ is also problematic because we have very few information to estimate $\lambda$, in particular when $n$ is also small. We therefore propose a Bayesian approach to solve this problem, building on two relevant features of such statistics : posterior distribution of parameter estimates and usage of prior information. But before moving to this direction, we will first take time to better describe what is exactly meant by an interaction probability and appropriately define sources of uncertainty.
+
+The situation where $k = 0$ is also problematic because we have very little information with which to estimate $\lambda$, in particular when $n$ is also small. We therefore propose a Bayesian approach to solve this problem, building on two relevant features of such statistics : posterior distribution of parameter estimates and usage of prior information. Before moving to this direction, we will first take time to better describe what is exactly meant by an interaction probability and appropriately define sources of uncertainty.
+
 
 So many sources of interaction pooled into a single entity; hard to estimate.
 
