--- a/manuscript/CI_interactions.tex
+++ b/manuscript/CI_interactions.tex
@@ -72,109 +72,113 @@ THIS SECTIONS BUILDS ON THE SALIX DATA TO ILLUSTRATE THE GAPS THERE ARE IN THE M
 
 \section*{A naive qunatification of interaction probability and uncertainty}
 
-It is getting more and more common to represent interactions as probabilities in theoretical models of network structure. For example, the minimum potential model introduces gaps in the feeding niche of predators by sampling based on the likelihood of each interaction~\citep{Allesina2008}, while a gaussian probability function is used to represent the niche by~\citet{Williams2010}. \citet{Eklof2013} also introduced variability  in the computation of network dimensions, allowing the absence of interactions within the n-dimension niche of every species. Empirical investigation of trait-matching constraints often consider the occurrence of interactions as binomial process (e.g.,~\citealp{Rohr2016}). There are also ways to perform analysis of probabilistic networks, with almost all metrics having a probabilistic version~\citep{Poisot2016}. But there is not yet consensus on what an interaction probability between a pair of species means, and this is definitely a problem when comes time to estimate the uncertainty of both pairwise interactions and entire networks. 
+  It is getting more and more common to represent interactions as probabilities in theoretical models of network structure. For example, the minimum potential model introduces gaps in the feeding niche of predators by sampling based on the likelihood of each interaction~\citep{Allesina2008}, while a gaussian probability function is used to represent the niche by~\citet{Williams2010}. \citet{Eklof2013} also introduced variability  in the computation of network dimensions, allowing the absence of interactions within the n-dimension niche of every species. Empirical investigation of trait-matching constraints often consider the occurrence of interactions as binomial process (e.g.,~\citealp{Rohr2016}). There are also ways to perform analysis of probabilistic networks, with almost all metrics having a probabilistic version~\citep{Poisot2016}. But there is not yet consensus on what an interaction probability between a pair of species means, and this is definitely a problem when comes time to estimate the uncertainty of both pairwise interactions and entire networks. 
 
 
-As a start, we will consider how we could naively quantify intetraction probability and its associated uncertainty for an interaction that has not yet been observed. We consider that a pair of species have been observed $n$ times co-occurring at one location, and the number of times they have been observed interacting is $k = 0$. We aim to evaluate the uncertainty of this interaction. The occurrence of an interaction is a Bernoulli trial. Consequently, the number of success $k$ over $n$ trials will follow a binomial distribution: 
-    
-    \begin{equation}
-      X \sim Bin(n,\lambda) ,
-    \end{equation}
+  As a start, we will consider how we could naively quantify intetraction probability and its associated uncertainty for an interaction that has not yet been observed. We consider that a pair of species have been observed $n$ times co-occurring at one location, and the number of times they have been observed interacting is $k = 0$. We aim to evaluate the uncertainty of this interaction. The occurrence of an interaction is a Bernoulli trial. Consequently, the number of success $k$ over $n$ trials will follow a binomial distribution: 
+      
+      \begin{equation}
+        X \sim Bin(n,\lambda) ,
+      \end{equation}
 
-    \noindent and 
+      \noindent and 
 
-    \begin{equation}
-       P(X = k|\lambda,n) = {n \choose k}\lambda^k(1-\lambda)^{n-k} . 
-       \label{likelihood}
-    \end{equation}
+      \begin{equation}
+         P(X = k|\lambda,n) = {n \choose k}\lambda^k(1-\lambda)^{n-k} . 
+         \label{likelihood}
+      \end{equation}
 
-\noindent The parameter $\lambda$, the probability of observing an interaction over an infinite time interval and area, is the quantity we want to estimate from empirical data. 
-The maximal likelihood estimate (MLE) of $\lambda$ is straightforward to find given $k$ and $n$. It is simply equal to:
+  \noindent The parameter $\lambda$, the probability of observing an interaction over an infinite time interval and area, is the quantity we want to estimate from empirical data. 
+  The maximal likelihood estimate (MLE) of $\lambda$ is straightforward to find given $k$ and $n$. It is simply equal to:
 
-    \begin{equation}
-      \theta_{MLE} = \frac{k}{n}  .
-      \label{theta_MLE}
-    \end{equation}
+      \begin{equation}
+        \theta_{MLE} = \frac{k}{n}  .
+        \label{theta_MLE}
+      \end{equation}
 
-The variance of a Bernoulli experiment is simply $n\lambda$(1-$\lambda$). It is important to remember this variance reports the variability of the number of success $k$ for $n$ trials and is not the variance associated with the estimation of $\lambda$.
-Given this variance, it is possible to compute the confidence interval for the MLE of $\lambda$ using any of several methods, including the \emph{Wilson score interval}, the \emph{Clopper-Pearson interval}, and the \emph{Agresti-Coull Interval}. Finding this estimate is therefore quite straightforward, but it nonetheless has two drawbacks. First, $\lambda$ is a random variable with a given uncertainty and whose distribution is unknown, it is not a single point estimate. This means that even if $k = 0$ in a given sample, this does not necessarily imply that the two species will never interact. It means that no interaction is the most likely situation but there is nonetheless a significant chance that the two species could interaction. In contrast with the situation where $k>0$, when we are sure that an interaction is feasible, 
-% (in which case, the ratio $k/n$ is smaller than $n$ because of detection and process uncertainty),  % This parenthetical makes the sentence very long. Is it necessary?
-we are not sure that absence of interactions is caused by $L=0$. Second, and most importantly, the number of trials $n$ might be very low in many instances (and some pairs of species might even not be documented once). Consequently, the uncertainty in the estimation of $\lambda$ might be considerable. We illustrated in Fig. X how the estimate of $\lambda$ could vary with sampling size using the Clopper-Pearson interval. It shows that the 95\% confidence interval requires a signifcant amount of sampling in order to be sure that species are not interacting. 
-% Is the Clopper-Pearson interval the one in Dom's code snippets? If so, this is Fig.~\ref{Salix_cdfs}
-
-
-The situation where $k = 0$ is also problematic because we have very little information with which to estimate $\lambda$, in particular when $n$ is also small. We therefore propose a Bayesian approach to solve this problem, building on two relevant features of such statistics : posterior distribution of parameter estimates and usage of prior information. Before moving to this direction, we will first take time to better describe what is exactly meant by an interaction probability and appropriately define sources of uncertainty.
+  The variance of a Bernoulli experiment is simply $n\lambda$(1-$\lambda$). It is important to remember this variance reports the variability of the number of success $k$ for $n$ trials and is not the variance associated with the estimation of $\lambda$.
+  Given this variance, it is possible to compute the confidence interval for the MLE of $\lambda$ using any of several methods, including the \emph{Wilson score interval}, the \emph{Clopper-Pearson interval}, and the \emph{Agresti-Coull Interval}. Finding this estimate is therefore quite straightforward, but it nonetheless has two drawbacks. First, $\lambda$ is a random variable with a given uncertainty and whose distribution is unknown, it is not a single point estimate. This means that even if $k = 0$ in a given sample, this does not necessarily imply that the two species will never interact. It means that no interaction is the most likely situation but there is nonetheless a significant chance that the two species could interaction. In contrast with the situation where $k>0$, when we are sure that an interaction is feasible, 
+  % (in which case, the ratio $k/n$ is smaller than $n$ because of detection and process uncertainty),  % This parenthetical makes the sentence very long. Is it necessary?
+  we are not sure that absence of interactions is caused by $L=0$. Second, and most importantly, the number of trials $n$ might be very low in many instances (and some pairs of species might even not be documented once). Consequently, the uncertainty in the estimation of $\lambda$ might be considerable. We illustrated in Fig. X how the estimate of $\lambda$ could vary with sampling size using the Clopper-Pearson interval. It shows that the 95\% confidence interval requires a signifcant amount of sampling in order to be sure that species are not interacting. 
+  % Is the Clopper-Pearson interval the one in Dom's code snippets? If so, this is Fig.~\ref{Salix_cdfs}
 
 
-So many sources of interaction pooled into a single entity; hard to estimate.
-
-MLE is zero if no interactions detected, but there may still be a substantial probability of interaction should the two species co-occur. [This is particularly important in the context of a changing world, where species not co-occurring today – or species not detected co-occurring today – may well do so tomorrow, forming complex interactions.]
+  The situation where $k = 0$ is also problematic because we have very little information with which to estimate $\lambda$, in particular when $n$ is also small. We therefore propose a Bayesian approach to solve this problem, building on two relevant features of such statistics : posterior distribution of parameter estimates and usage of prior information. Before moving to this direction, we will first take time to better describe what is exactly meant by an interaction probability and appropriately define sources of uncertainty.
 
 
+  So many sources of interaction pooled into a single entity; hard to estimate.
 
+  MLE is zero if no interactions detected, but there may still be a substantial probability of interaction should the two species co-occur. [This is particularly important in the context of a changing world, where species not co-occurring today – or species not detected co-occurring today – may well do so tomorrow, forming complex interactions.]
 
 
 \section*{Why do some interactions not occur?}
 
-What does this question mean exactly? We consider that there are three nested levels of uncertainty making the occurance of any interaction a stochastic process:  
+  What does this question mean exactly? We consider that there are three nested levels of uncertainty making the occurance of any interaction a stochastic process:  
 
 
-  \subsection*{Interaction uncertainty} 
+    \subsection*{Interaction uncertainty} 
 
-  First, and most fundamentally, we do not know whether or not a pair of species have the appropriate characteristics to interact. We define the probability of an interaction $L$ as $P(L)=\lambda$. Obviously, because $k=0$, it is very likely that they cannot interact even if there were no time or environmental constraints preventing the interaction. But it is nonetheless possible that the interaction is a rare phenomenon that has never been documented before. This source of uncertainty is the one documented by trait-matching models~\citep{}. It arises because every model is imperfect and lacks information (i.e. traits) about the constraints on the interaction. In other words, with sufficient sampling and all information accessible, this interaction probability should either tend to 0 or to 1 and the uncertainty vanish.  
-
-
-  \subsection*{Process uncertainty} 
-
-  It could be that the interaction is feasible, i.e. $L=1$, but that it does not occur at a given location or moment in time because there are local constraints preventing it from occurring. We define the realization of the interaction process $X$ given that the interaction is feasible as a stochastic process with associated probability $P(X|L)=\chi$. This phenomenon of interaction contingencies is usually not considered in network studies, but there is a rich literature in community ecology about the contingencies of interactions~\citep{}. We imagine for instance that an interaction between a gall and a parasitoid might not be recorded at a location because it was the wrong time of the year and the gall had not yet formed (phenological constraints), a late frost killed the larvae (an abiotic environmental constraint), another parasitoid species competitively excluded the parasitoid species of interst (a biotic environmental constraint) or simply the parasitoid is too rare to interact with all of its viable hosts (an abundance constraint). 
+    First, and most fundamentally, we do not know whether or not a pair of species have the appropriate characteristics to interact. We define the probability of an interaction $L$ as $P(L)=\lambda$. Obviously, because $k=0$, it is very likely that they cannot interact even if there were no time or environmental constraints preventing the interaction. But it is nonetheless possible that the interaction is a rare phenomenon that has never been documented before. This source of uncertainty is the one documented by trait-matching models~\citep{}. It arises because every model is imperfect and lacks information (i.e. traits) about the constraints on the interaction. In other words, with sufficient sampling and all information accessible, this interaction probability should either tend to 0 or to 1 and the uncertainty vanish.  
 
 
-  \subsection*{Detection uncertainty} 
+    \subsection*{Process uncertainty} 
 
-  Lastly, measurement errors are always source of uncertainty in the observation of ecological processes. We define the detection of an interaction $D$, given an interaction is feasible and occurs in the local conditions, as a stochastic process with associated probability $P(D|X,L)=\delta$. Detection failure could happen for several reasons, for instance if the rearing of a parasitoid fails with inappropriate lab conditions or because of species mis-identification. Some sources of detection error could be minimized with appropriate sampling effort ($\delta$ will converge to one with increasing number of collected galls), but other sources are often difficult to reduce (e.g. the occurrence of cryptic species might require molecular analysis for appropriate taxonomic identification).
-
-
-  \subsection*{What is an observation of "no interaction"?} 
-
-  The combination of these three sources of uncertainty together leads to many potential explanations for the observation of an absence of interaction, but only the situation where $L = 0$ (a true absence) is relevant for the investigation of networks. While the observation of an interaction is straightforward to interpret, absence of interactions must be decomposed in different quantities. It is particularly important to rule out the situations where $D=0 \cup X = 1 \cup L=1$, i.e. the interaction occurred at the location but was not observed, and $D=1 \cup X = 0 \cup L =1$, the interaction is feasible and would have been detected but did not occur at the local site. 
+    It could be that the interaction is feasible, i.e. $L=1$, but that it does not occur at a given location or moment in time because there are local constraints preventing it from occurring. We define the realization of the interaction process $X$ given that the interaction is feasible as a stochastic process with associated probability $P(X|L)=\chi$. This phenomenon of interaction contingencies is usually not considered in network studies, but there is a rich literature in community ecology about the contingencies of interactions~\citep{}. We imagine for instance that an interaction between a gall and a parasitoid might not be recorded at a location because it was the wrong time of the year and the gall had not yet formed (phenological constraints), a late frost killed the larvae (an abiotic environmental constraint), another parasitoid species competitively excluded the parasitoid species of interst (a biotic environmental constraint) or simply the parasitoid is too rare to interact with all of its viable hosts (an abundance constraint). 
 
 
-It is important to keep in mind that for network analysis, ecologists seek to measure the occurrence of true absences, which is the joint event $L=0 \cup X=1 \cup D=1$), but in reality they measure the marginal probability $P(L) = k/n$. % I'm pretty sure this should be L=0 but X=1 and D=1: interaction not feasible but site and detection perfect.
+    \subsection*{Detection uncertainty} 
+
+    Lastly, measurement errors are always source of uncertainty in the observation of ecological processes. We define the detection of an interaction $D$, given an interaction is feasible and occurs in the local conditions, as a stochastic process with associated probability $P(D|X,L)=\delta$. Detection failure could happen for several reasons, for instance if the rearing of a parasitoid fails with inappropriate lab conditions or because of species mis-identification. Some sources of detection error could be minimized with appropriate sampling effort ($\delta$ will converge to one with increasing number of collected galls), but other sources are often difficult to reduce (e.g. the occurrence of cryptic species might require molecular analysis for appropriate taxonomic identification).
+
+
+    \subsection*{What is an observation of "no interaction"?} 
+
+    The combination of these three sources of uncertainty together leads to many potential explanations for the observation of an absence of interaction, but only the situation where $L = 0$ (a true absence) is relevant for the investigation of networks. While the observation of an interaction is straightforward to interpret, absence of interactions must be decomposed in different quantities. It is particularly important to rule out the situations where $D=0 \cup X = 1 \cup L=1$, i.e. the interaction occurred at the location but was not observed, and $D=1 \cup X = 0 \cup L =1$, the interaction is feasible and would have been detected but did not occur at the local site. 
+
+
+  It is important to keep in mind that for network analysis, ecologists seek to measure the occurrence of true absences, which is the joint event $L=0 \cup X=1 \cup D=1$), but in reality they measure the marginal probability $P(L) = k/n$. % I'm pretty sure this should be L=0 but X=1 and D=1: interaction not feasible but site and detection perfect.
 
 
 
 \section*{Estimating detection and process uncertainty}
 
-For the ecologist working on collecting network data, and on later interpreting these data, the considerations above raise a major challenge: how may we infer whether unobserved interactions went undetected due to sampling, or whether they truly do not occur. How then may we refine our sampling approaches to reduce uncertainties, and to gain insights into the impact of multiple processes on field observations? Importantly, some sources can be minimized with appropriate sampling design and efforts, while other sources are difficult or impossible to reduce – since they are generated by chance variation created by the very process in which we are interested.
+  For the ecologist working on collecting network data, and on later interpreting these data, the considerations above raise a major challenge: how may we infer whether unobserved interactions went undetected due to sampling, or whether they truly do not occur. How then may we refine our sampling approaches to reduce uncertainties, and to gain insights into the impact of multiple processes on field observations? Importantly, some sources can be minimized with appropriate sampling design and efforts, while other sources are difficult or impossible to reduce – since they are generated by chance variation created by the very process in which we are interested.
 
 
-The basic information that we are collecting consists of matrices of interaction partners. Our count of interactions between species A and species B reflects uncertainty with respect to whether two species interact when co-occurring at a given site, chance variation in whether the interaction is realized, and uncertainty with respect to whether it is detected when realized. In this case, what can we do to pin down any of these different types of variation?
+  The basic information that we are collecting consists of matrices of interaction partners. Our count of interactions between species A and species B reflects uncertainty with respect to whether two species interact when co-occurring at a given site, chance variation in whether the interaction is realized, and uncertainty with respect to whether it is detected when realized. In this case, what can we do to pin down any of these different types of variation?
 
 
-A simple example will illustrate the problem: assume that we want to infer the probability of an interaction between two species, A and B. Now assume that in reality, interaction between A and B is completely impossible (i.e. the true (P(L|co-occurrence of A and B = 0). Given no added detection error in observing the incidence of the interaction, then a single observation of species co-occurrence will reveal (very) little regarding the probability of the interaction – the confidence limits for one observation essentially spans from 0 to 1 (see following section). For 5 observations, this confidence limit will still extends to 0.5. Only with thirty observations will it shrink to 0.1. Thus, adding (many) more observations is certainly useful in controlling uncertainty due to stochasticity inherent in the process itself.
+  A simple example will illustrate the problem: assume that we want to infer the probability of an interaction between two species, A and B. Now assume that in reality, interaction between A and B is completely impossible (i.e. the true $\lambda$= 0). Given no added detection error in observing the incidence of the interaction, then a single observation of species co-occurrence will reveal (very) little regarding the probability of the interaction – the confidence limits for one observation essentially spans from 0 to 1 (see following section). For 5 observations, this confidence limit will still extends to 0.5. Only with thirty observations will it shrink to 0.1. Thus, adding (many) more observations is certainly useful in controlling uncertainty due to stochasticity inherent in the process itself.
 
-\begin{figure}
-  \caption{This figure illustrates the upper bound (solid black line) of a 95\% confidence interval for the interaction probability $\lamba$ when there is no observation of an interaction ($k = 0$) and $n$ observations of the two species co-occurring at a given location. The confidence interval is based on the Clopper-Pearson derivation from the beta distribution. A threshold interaction probability of 0.1 is indicated by the dotted red line.}
-  \label{upper_limits}
-  \includegraphics*[width=.8\textwidth]{figures/upper_limit_DG.eps}
-\end{figure}
-
-
-The pattern of Fig.~\ref{upper_limits} should be compared to the frequency of co-occurrence of taxa in the Salix-galler data set. Here, most(TO COMPUTE) pairs of species are never found co-occurring, and for species found co-occurring the number of co-occurrences was generally low (Fig from AC and KW). Among the species which did sometimes interact when co-occurring, the incidence of interaction was actually low(TO COMPUTE) (freq histogram Fig from AC and KW). Thus, even in the most extensive data set that we could think of, limited sampling is clearly a major source of uncertainty.
-
-The obvious rule of thumb derived from the above example will be “sample more”, but we note that there are limits to the utility of this motto. Sampling more will clearly reduce uncertainty regarding the upper bound of the probability of interaction, and it will also increase the probability of detecting unlikely interactions (i.e. interactions occurring with a low probability). Yet, since the probability of observing the co-occurrence of two species will always be higher than the probability of observing their interaction (since the probability of interaction is conditional on both interaction partners being present), we will accumulate observations of co-occurrences quicker than we will accumulate observations of interactions. Thus, the more we sample, the more holes will appear in our interaction matrix, which may seem like a counter-intuitive outcome.
-
-As a solution towards deciding whether unobserved interactions were undetected due to sampling, or whether they truly do not occur, Weinstein et al. (2017) used daily repeated sampling rounds to estimate the daily probability of detecting a hummingbird interaction, and to thereby model the observation and process mechanisms (Weinstein, B. G., \& Graham, C. H. (2017). On comparing traits and abundance for predicting species interactions with imperfect detection. Food Webs 11; 17-25: https://doi.org/10.1016/j.fooweb.2017.05.002). While conceptually attractive, this approach is unsuitable for interactions occurring over longer time scales (like associations between hosts and parasitoids with a single generation per year), or very rare interactions (since no matter how frequently and extensively we sample, there will still be some rare interactions lurking around). What is worse, the problem persists that if a given interaction is not observed on a given day, then it may still be either because it was impossible that day ((P(L|co-occurrence of A and B)=0), because interaction between the two did occur but was not observed, or from any combination of the two. Thus, from a conceptual perspective, this approach will fail to satisfactorily separating between all sources of uncertainty. An interaction not observed on day t may have gone unobserved either because there were constraints on the process (i.e. the probability was really zero), because of chance variation in the realized incidence of an event associated with a finite probability. Most importantly, if during a series of days, two species are simply never observed co-occurring, then we still have not learnt a thing about their probability of interacting should they do so. In other words, if the two interaction partners do not co-occur, we will still gain no information.
-
-An added complication is that not all sourced of uncertainty are proportional to sample size. To score an interaction between A and B, we will need to identify both partners correctly (a non-trivial problem in many food webs; e.g. Kaartinen et al. 2011 Ecol Entomol; Roslin and Majaneva 2016) and be able to resolve all interactions with a similar likelihood. For both molecular (ref ref) and rearing techniques, given types of interactions may go unnoticed due to technical challenges.
-
-The bottom line is that separating between different sources of uncertainty is difficult indeed. In the best of all possible worlds, we might then use an experimental approach to estimate detection uncertainty: we might create replicate sets of cases where the interaction is really there, then evaluating them and examining the fraction of cases scoring positive. Yet, as anyone attempting these experiments will know, most interaction partners are proving notoriously unwilling to collaborate. Gallers refuse to lay eggs on their host plants (ref ref), parasitoids to attack their hosts when experimentally introduced (Gariepy 2017; ref ref). If we introduce only one of the components (like in the cases where we expose a set of hosts to parasitism; ref ref; Gripenberg et al. xxx) then we are already confounding multiple levels of uncertainty in the outcome – that of interaction uncertainty (whether the species will interact once both there), process uncertainty (whether the interaction will occur if and since the probability of interaction is below one), and detection uncertainty (i.e. whether we will observed the interaction once realized). To perform these experiments in a comprehensive and reliable manner, we will then need to expose a large number of interactions in a comprehensive experiment across space. This type of “cafeteria experiments in space” is not only unfeasible, but also undermining our original objective: If the local occurrence of interactions is uninformative regarding the underlying probabilities of occurrence, then we should be doing something else than wasting a monumental effort on collecting local interaction matrices. <deep sigh and forget that section? > 
-
-As a tentative solution to disentangling observation and process mechanisms, we propose that some insights regarding the detectability of interactions between species not found co-occurring may be gained from data on other species, for which it is known that the interaction is feasible. If we use this information obtain the joint probability of detection and process (e.g. to glean information regarding at how many sites the species are found interacting across the entire dataset), and assuming that most of this pattern is due to variation in detection rate, then insights into the incidence of interactions between species may be gleaned from the accumulation rate of positive interactions at sites were interaction is possible (i.e. with at least one observation of a positive interaction) [this reasoning to be further formalized]
+  \begin{figure}
+    \caption{This figure illustrates the upper bound (solid black line) of a 95\% confidence interval for the interaction probability $\lamba$ when there is no observation of an interaction ($k = 0$) and $n$ observations of the two species co-occurring at a given location. The confidence interval is based on the Clopper-Pearson derivation from the beta distribution. A threshold interaction probability of 0.1 is indicated by the dotted red line.}
+    \label{upper_limits}
+    \includegraphics*[width=.8\textwidth]{figures/upper_limit_DG.eps}
+  \end{figure}
 
 
+  The pattern of Fig.~\ref{upper_limits} should be compared to the frequency of co-occurrence of taxa in the Salix-galler data set. Here, most (3986 out of 4992) pairs of species are never found co-occurring, and for species found co-occurring the number of co-occurrences was generally low (Fig.~\ref{histograms}A). Among the species which did sometimes interact when co-occurring, the incidence of interaction was actually low. Only 141 pairs of species were observed interacting: of these, 26 were observed interacting only once and 48.2\% were observed interacting five or fewer times (Fig.~\ref{histograms}B). Thus, even in the most extensive data set that we could think of, limited sampling is clearly a major source of uncertainty.
 
 
+  \begin{figure}
+    \caption{\textbf{A)} Most pairs of \emph{Salix} and galler species were never observed co-occurring despite the high levels of replication in our example dataset. For those that were observed together at least once, the number of observed co-occurances was generally small (\textless10). Here we show a histogram of the number of pairs of species observed co-occurring at least once. 3986 pairs of species were never observed co-occurring: this is represented by the upwards triangle at 0. \textbf{B)} Most pairs of species that were observed at the same site were never observed interacting. Here we show a histogram of the number of observed interactions within pairs of co-occurring species.}
+    \label{histograms}
+    \includegraphics*[width=.8\textwidth]{figures/Salix_Galler_histogram.eps}
+    \end{figure}
+
+
+  The obvious rule of thumb derived from the above example is “sample more”, but we note that there are limits to the utility of this motto. Sampling more will clearly reduce uncertainty regarding the upper bound of the probability of interaction, and it will also increase the probability of detecting unlikely interactions (i.e. interactions occurring with a low probability). Yet, since the probability of observing the co-occurrence of two species will always be higher than the probability of observing their interaction (since the probability of interaction is conditional on both interaction partners being present), we will accumulate observations of co-occurrences faster than we will accumulate observations of interactions. Thus, the more we sample, the more zeros will appear in our interaction matrix, which may seem like a counter-intuitive outcome.
+
+  As a solution towards deciding whether unobserved interactions were undetected due to sampling, or whether they truly do not occur,~\citet{Weinstein2017} used daily repeated sampling rounds to estimate the daily probability of detecting a hummingbird interaction, and to thereby model the observation and process mechanisms~\citep{Weinstein2017}. While conceptually attractive, this approach is unsuitable for interactions occurring over longer time scales (e.g., associations between hosts and parasitoids with a single generation per year), or very rare interactions (since no matter how frequently and extensively we sample, there will still be some interactions lurking around). What is worse, the problem persists that if a given interaction is not observed on a given day, this could be either because it was impossible that day despite being otherwise feasible (P($X|L=1$=0), because interaction between the two did occur but could not be observed (P($D|X$=1,L=1)=0), or from any combination of the two. From a conceptual perspective, this approach will thus fail to satisfactorily distinguish between sources of uncertainty. An interaction not observed on day $t$ may have gone undetected either because there were constraints on the process (i.e. the probability $\lambda$ was really zero) or because of chance variation in the realized incidence of an event associated with a finite probability. Most importantly, if two species are never observed co-occurring during several days of sampling then we have learned nothing about their probability of interacting if they should ever co-occur. In other words, there is no information without co-occurance.
+
+
+  An added complication is that not all sources of uncertainty are proportional to sample size. To record an interaction between A and B, we need to identify both partners correctly (a non-trivial problem in many food webs; e.g.~\citet{Kaartinen2011,Roslin2016}) and be able to resolve all interactions with a similar likelihood. For both molecular~\citep{} and rearing~\citep{} techniques, certain types of interactions may go unnoticed due to technical challenges. This can bias the set of recorded interactions.
+
+
+  The bottom line is that separating different sources of uncertainty is difficult indeed. In the best of all possible worlds, we might use an experimental approach to estimate detection uncertainty by creating replicate cases where the interaction really occurs and then evaluating the fraction of cases where the interaction is detected. Yet, as anyone attempting these experiments will know, most interaction partners are notoriously unwilling to collaborate. Gallers refuse to lay eggs on their host plants in captivity (ref ref) and parasitoids decline to attack their hosts when experimentally introduced (Gariepy 2017; ref ref). If we introduce only one of the components (as in the cases where we expose a set of hosts to parasitism; ref ref; Gripenberg et al. xxx) then we are already confounding multiple levels of uncertainty since it is not certain whether the interaction will occur or whether we can detect it. To perform these experiments in a comprehensive and reliable manner, we will then need to replicate a large number of interactions in a comprehensive experiment across space. This type of “cafeteria experiments in space” is not only unfeasible, but also undermines our original objective: If the local occurrence of interactions is uninformative regarding the underlying probabilities of occurrence, then is not likely to be worthwhile collecting these local interaction matrices in the first place. <deep sigh and forget that section? > 
+
+
+  As an alternative to abandoning empirical networks or continuing to ignore the uncertainty inherent in undetected observations, we propose that some insight regarding the detectability of interactions between species not found co-occurring may be gained from data on other species between which interactions are known to be feasible. If we use this information obtain the joint probability of detection and process (e.g. to glean information regarding at how many sites the species are found interacting across the entire dataset), and assuming that most of this pattern is due to variation in detection rate, then insights into the incidence of interactions between species may be gleaned from the accumulation rate of positive interactions at sites were interaction is possible (i.e. with at least one observation of a positive interaction) [this reasoning to be further formalized]
 
 
 \section*{Bayesian approach to infer interaction probabilities}
